Backport  #6724